# CRM_system

./: README.md  pyproject.toml  requirements.txt
crm_project/ads/: forms.py  models.py  urls.py  views.py
crm_project/contracts/: forms.py  models.py  urls.py  views.py
crm_project/crm_project/: settings.py  urls.py
crm_project/customers/: forms.py  models.py  urls.py  views.py
crm_project/leads/: forms.py  models.py  urls.py  views.py
crm_project/products/: forms.py  models.py  urls.py  views.py
crm_project/registration/: urls.py  views.py
crm_project/users/: admin.py  forms.py  models.py  urls.py  views.py
